// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Display list With icon renders correctly 1`] = `
<jest>
  <div
    class="ecl-display-list ecl-display-list--zebra"
  >
    <div
      class="ecl-display-list__item"
    >
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-display-list__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-display-list__title"
          >
            Display list item 1
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-display-list__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-display-list__title"
          >
            Display list item 2
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-display-list__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-display-list__title"
          >
            Display list item 3
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--l ecl-display-list__icon"
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#regulation"
            />
          </svg>
          <div
            class="ecl-display-list__title"
          >
            Display list item 4
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Display list With image renders correctly 1`] = `
<jest>
  <div
    class="ecl-display-list ecl-display-list--zebra"
  >
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 1
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 2
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 3
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 4
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Display list With image renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-display-list ecl-display-list--zebra"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 1
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 2
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 3
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 4
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;

exports[`Display list With image renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-display-list ecl-display-list--zebra custom-class custom-class--test"
  >
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 1
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 2
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 3
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
    <div
      class="ecl-display-list__item"
    >
      <div
        aria-label="alt text for image"
        class="ecl-display-list__image"
        role="img"
        style="background-image:url('https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg')"
      />
      <div
        class="ecl-display-list__detail"
      >
        <div
          class="ecl-display-list__title-container"
        >
          <div
            class="ecl-display-list__title"
          >
            Display list item 4
          </div>
        </div>
        <div
          class="ecl-display-list__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eleifend quam leo, at malesuada ex viverra vitae. Nullam id felis eu lorem condimentum rutrum vitae ut felis. Nam ultricies, metus vel aliquam euismod, lacus dolor sodales neque, in laoreet tellus erat posuere purus. Fusce sit amet sem dui. In nec lacinia eros.
        </div>
      </div>
    </div>
  </div>
</jest>
`;
